Grace/tests/gibbs/errors/t180.grace
// ERROR = P1017
var x := 1 * (6 - 2
